2009-11-05 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genUnpackBits): setup FSR before using it, fixes
          "[Sdcc-user] The damned loop from hell"; plus cosmetic changes

2009-11-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmem.c(defaultOClass, allocDefault): refactored
	* src/SDCCmem.h: added defaultOClass
	* src/SDCCsymt.c(processFuncArgs): use defaultOClass to support storage
	  class in parameters, fixes bug 2761883
	* support/regression/tests/bug2761883.c: new, added
	* doc/sdccman.lyx: removed warning about ignored storage class in params

2009-11-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(constExprTree): struct fields have a constant offset

2009-11-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c(initValPointer): fixed bug 1503239
	* support/regression/tests/bug1928022.c: added test cases

2009-11-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	* src/mcs51/peeph.def,
	* src/avr/peeph.def,
	* src/z80/peeph-z80.def,
	* src/ds390/peeph.def,
	* support/regression/tests/bug-2890326.c:
	  Fixed bug #2890326.

2009-11-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c(addSymChain, checkDecl): fixed bug 1470790
	* support/regression/tests/zeropad.c: added test

2009-11-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(decorateType,CAST): fold literal pointers
	* src/SDCCdflow.c(usedInRemaining),
	* src/SDCCicode.c(geniCodeCall): fix for non-symbol values
	* src/SDCCsymt.c(isConstant): reverted, make literals const instead
	* src/SDCCval.c(constFloatVal, constFixed16x16Val, constVal, constCharVal,
	  strVal): make literals const
	  (valForArray),
	  (valForStructElem): fixed bug 1928022 with folded literal pointers
	* src/ds390/gen.c(genCall),
	* src/hc08/gen.c(genCall),
	* src/mcs51/gen.c(genCall),
	* src/z80/gen.c(emitCall): handle literal function pointers
	* support/regression/tests/bug1928022.c: new, added
